<resources>
    <string name="app_name">FoodManagement</string>
    <string name="button_login">login</string>
    <string name="button_register">register</string>
    <string name="edit_email">Enter your Email Id</string>
    <string name="edit_password">Password</string>
    <string name="edit_login">login</string>
    <string name="edit_register">register</string>
    <string name="edit_name">name</string>
    <string name="action_settings">action_settings</string>
    <string name="textmenu">Menu</string>
    <string name="textbreakfast">Breakfast</string>
    <string name="textbfitems">Items</string>
    <string name="textlunch">Lunch</string>
    <string name="textlitems">Items</string>
    <string name="textsupper">Supper</string>
    <string name="textsitems">Items</string>
    <string name="submit">SUBMIT</string>
    <string name="menu1">Update Menu</string>
    <string-array name="options">
        <item>Count</item>
        <item>UpdateMenu</item>
        <item>GiveCount</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>

    <!--&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
</resources>
