<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.ibtspl.foodmanagement.LoginActivity">
<TextView android:text="Login" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/textview"
    android:textSize="35dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />
<ImageView
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageView"
    android:src="@drawable/logo"
    android:layout_below="@+id/textview"
    android:layout_centerHorizontal="true" />
<!-- Email Label -->
<EditText android:id="@+id/edit_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/imageView"
    android:hint="@string/edit_email" />
<!-- Password Label -->
<EditText android:id="@+id/edit_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/edit_email"
    android:hint="@string/edit_password"/>
<Button android:id="@+id/edit_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/edit_password"
    android:hint="@string/edit_login"
    android:onClick="LoggedIn"/>
</RelativeLayout>
